Documentation edits made through Mintlify web editor

--- a/volunteer/introduction.mdx
+++ b/volunteer/introduction.mdx
@@ -1,5 +1,37 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Volunteer Guides"
 ---
 
+### Getting Started
+
+<CardGroup cols="2">
+  <Card title="Create Account" icon="user-plus" href="get-started">
+    Steps to create a new account
+  </Card>
+
+  <Card title="Find a Campaign" icon="magnifying-glass">
+    Steps to find your campaign
+  </Card>
+</CardGroup>
+
+### Volunteer Activities
+
+<CardGroup cols="2">
+  <Card title="Knock Doors" icon="house">
+    Guide on taking door-to-door surveys
+  </Card>
+
+  <Card title="Make Calls" icon="phone">
+    \*\* Coming Soon \*\*
+  </Card>
+</CardGroup>
+
+<CardGroup cols="2">
+  <Card title="Sign Deployment" icon="signs-post">
+    Guide on deploying and blitzing yard signs
+  </Card>
+
+  <Card title="Precinct Results" icon="check-to-slot">
+    Guide on logging precinct election results
+  </Card>
+</CardGroup>
