Documentation edits made through Mintlify web editor

--- a/volunteer/introduction.mdx
+++ b/volunteer/introduction.mdx
@@ -1,5 +1,6 @@
 ---
-title: "Volunteer Guides"
+title: "Volunteer Hub"
+description: "This section provides information on using Nexus as a volunteer. Browse the links below or use the search bar to find answers to your questions."
 ---
 
 ### Getting Started
