Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,7 +1,4 @@
----
-title: "Welcome"
-description: "Welcome to the Nexus help center. Start by using the search bar or browsing the categories to find answers, guides, and helpful tips."
----
+##
 
 ## Get Started
 
@@ -15,24 +12,24 @@ description: "Welcome to the Nexus help center. Start by using the search bar or
   </Card>
 </CardGroup>
 
-## Guides and Walkthroughs
-
-Update your docs to your brand and add valuable content for the best user conversion.
+## Volunteer Guides
 
 <CardGroup cols={2}>
-  <Card title="Customize Style" icon="palette" href="https://mintlify.com/docs/settings/global">
+  <Card title="Create an Account" icon="user-plus" href="volunteer/get-started">
     Customize your docs to your company's colors and brands
   </Card>
 
-  <Card title="Reference APIs" icon="code" href="https://mintlify.com/docs/api-playground/openapi">
+  <Card title="Find a Campaign" icon="magnifying-glass" href="volunteer/find-campaign">
     Automatically generate endpoints from an OpenAPI spec
   </Card>
 
-  <Card title="Add Components" icon="screwdriver-wrench" href="https://mintlify.com/docs/content/components/accordions">
+  <Card title="Knock Doors" icon="house" href="volunteer/knock-doors">
     Build interactive features and designs to guide your users
   </Card>
 
-  <Card title="Get Inspiration" icon="stars" href="https://mintlify.com/customers">
+  <Card title="All Volunteer Guides" icon="list" href="volunteer/introduction">
     Check out our showcase of our favorite documentation
   </Card>
 </CardGroup>
+
+## Campaign Guides
