--- a/volunteer/find-campaign.mdx
+++ b/volunteer/find-campaign.mdx
@@ -16,8 +16,6 @@ description: "After creating your account, your next step will be to add yoursel
     <Note>
       If you do not see the "Find a Campaign" option, it may mean you are already added to a campaign. Please see the section below titled "Find a Campaign (Multiple)"
     </Note>
-
-
   </Step>
 
   <Step title="Input Organization Code">
@@ -34,8 +32,6 @@ description: "After creating your account, your next step will be to add yoursel
     <Warning>
       If the system is not finding the intended campaign, we recommend reaching out to a campaign administrator to verify the code. <u>Nexus will not provide organization codes to anyone other than campaign administrators.</u>
     </Warning>
-
-
   </Step>
 </Steps>
 
@@ -70,7 +66,7 @@ description: "After creating your account, your next step will be to add yoursel
     ![](/orgcodeinput.jpg)
   </Step>
 
-  <Step title="Click Confirm">
+  <Step title="Click &#x22;Confirm&#x22;">
     If a campaign is found with that code, you will be shown a green checkmark with the campaign name. To finish adding yourself to the campaign, simply click "Confirm".
 
     ![](/campaignsuccess2.jpeg)
