Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,3 +1,8 @@
+---
+description: "Welcome to the Nexus help center. Start by using the search bar or browsing the categories to find answers, guides, and helpful tips."
+title: "Help Center"
+---
+
 ##
 
 ## Get Started
