Documentation edits made through Mintlify web editor

--- a/campaign/introduction.mdx
+++ b/campaign/introduction.mdx
@@ -1,5 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Campaign Hub"
+description: "This section provides information on using Nexus as a campaign administrator. Browse the links below or use the search bar to find answers to your questions."
 ---
-
