Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -8,11 +8,11 @@ title: "Help Center"
 ## Get Started
 
 <CardGroup cols={2}>
-  <Card title="I'm a Volunteer" icon="person" href="https://mintlify.com/docs/quickstart">
+  <Card title="I'm a Volunteer" icon="person" href="volunteer/introduction">
     Read helpful information to get started using Nexus as a volunteer.
   </Card>
 
-  <Card title="I'm a Campaign" icon="people-group" href="https://mintlify.com/docs/development">
+  <Card title="I'm a Campaign" icon="people-group" href="campaign/introduction">
     Read helpful information to get started using Nexus.
   </Card>
 </CardGroup>
